@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.003.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.006.
 use strict;
 use warnings;
 
@@ -24,6 +24,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.010",
   "NAME" => "Dist::Zilla::PluginBundle::Author::DBOOK",
   "PREREQ_PM" => {
+    "Data::Section" => 0,
     "Dist::Zilla" => 0,
     "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
     "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
@@ -80,7 +81,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.024",
+  "VERSION" => "0.025",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -88,6 +89,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Data::Section" => 0,
   "Dist::Zilla" => 0,
   "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
   "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
