@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Generate CONTRIBUTING.md in build and copy from build to root
 
 0.024     2016-05-02 14:25:27 EDT
   - Use Module::Metadata as the version_extractor for Test::ReportPrereqs if
